@@ -1,6 +1,7 @@
 ChangeLog for 2.53.1
 
 //Beta 16
+Clear the panel recent screen buttons when creating a new quest.
 Clear the panel recent screen buttons to prevent crashes from invalid maps.
 	( ZoriaRPG, 26th November, 2019 )
 	
